[gd_scene load_steps=19 format=2]

[ext_resource path="res://GameObjects/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameObjects/Ground.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameObjects/DiceBaskets/DamageBasket.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameObjects/DiceBaskets/HealthBasket.tscn" type="PackedScene" id=4]
[ext_resource path="res://GameObjects/DiceBaskets/SpeedBasket.tscn" type="PackedScene" id=5]
[ext_resource path="res://GameObjects/DiceBaskets/AttackSpeedBasket.tscn" type="PackedScene" id=6]
[ext_resource path="res://GameObjects/Plant.tscn" type="PackedScene" id=7]
[ext_resource path="res://GameObjects/WaveDisplay.tscn" type="PackedScene" id=8]
[ext_resource path="res://GameObjects/UI.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scripts/MainLevel.gd" type="Script" id=10]
[ext_resource path="res://GameObjects/Enemy.tscn" type="PackedScene" id=11]
[ext_resource path="res://GameObjects/Bin.tscn" type="PackedScene" id=12]
[ext_resource path="res://GameObjects/Table.tscn" type="PackedScene" id=13]
[ext_resource path="res://GameObjects/TitleScreen.tscn" type="PackedScene" id=14]
[ext_resource path="res://Resources/Theme.tres" type="Theme" id=15]
[ext_resource path="res://GameObjects/Tutorial.tscn" type="PackedScene" id=16]
[ext_resource path="res://Audio/Music/Music.wav" type="AudioStream" id=17]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -112, -88, 0, 0, 0, 0, 424, -88, 0, 0, 0, 0, 424, 256, 0, 0, 0, 0, -112, 256, 0, 0, 0, 0, -112, -88 )
}

[node name="World" type="Node2D"]
script = ExtResource( 10 )
mob_scene = ExtResource( 11 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Tutorial" parent="CanvasLayer" instance=ExtResource( 16 )]

[node name="WaveDisplay" parent="CanvasLayer" instance=ExtResource( 8 )]
visible = false
mouse_filter = 2

[node name="UI" parent="CanvasLayer" instance=ExtResource( 9 )]
visible = false
rect_scale = Vector2( 0.5, 0.5 )

[node name="TitleScreen" parent="CanvasLayer" instance=ExtResource( 14 )]

[node name="TutorialButton" type="Button" parent="CanvasLayer"]
margin_left = 160.0
margin_top = 152.0
margin_right = 224.0
margin_bottom = 177.0
theme = ExtResource( 15 )
text = "Tutorial"

[node name="GameOver" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -37.0
margin_top = -7.0
margin_right = 37.0
margin_bottom = 7.0
theme = ExtResource( 15 )
text = "Game Over!"
align = 1
valign = 1

[node name="Timer" type="Timer" parent="CanvasLayer/GameOver"]
one_shot = true

[node name="Ground" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( -131077, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196608, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -196604, 0, 0, -196603, 0, 0, -196602, 0, 0, -196601, 0, 0, -196600, 0, 0, -196599, 0, 0, -196598, 0, 0, -196597, 0, 0, -196596, 0, 0, -196595, 0, 0, -196594, 0, 0, -196593, 0, 0, -196592, 0, 0, -196591, 0, 0, -196590, 0, 0, -196589, 0, 0, -196588, 0, 0, -196587, 0, 0, -196586, 0, 0, -196585, 0, 0, -196584, 0, 0, -65541, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131072, 0, 0, -131071, 0, 0, -131070, 0, 0, -131069, 0, 0, -131068, 0, 0, -131067, 0, 0, -131066, 0, 0, -131065, 0, 0, -131064, 0, 0, -131063, 0, 0, -131062, 0, 0, -131061, 0, 0, -131060, 0, 0, -131059, 0, 0, -131058, 0, 0, -131057, 0, 0, -131056, 0, 0, -131055, 0, 0, -131054, 0, 0, -131053, 0, 0, -131052, 0, 0, -131051, 0, 0, -131050, 0, 0, -131049, 0, 0, -131048, 0, 0, -5, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65531, 0, 0, -65530, 0, 0, -65529, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, -65524, 0, 0, -65523, 0, 0, -65522, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, -65512, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 24, 0, 0, 131067, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 1, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65545, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 196603, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131072, 0, 0, 131073, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 262139, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196608, 0, 0, 196609, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196618, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 327675, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262146, 1, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262154, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 393211, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327680, 0, 0, 327681, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 524283, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 1, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 589819, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 655355, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 720891, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655360, 0, 0, 655361, 0, 0, 655362, 0, 0, 655363, 0, 0, 655364, 0, 0, 655365, 0, 0, 655366, 0, 0, 655367, 0, 0, 655368, 0, 0, 655369, 0, 0, 655370, 0, 0, 655371, 0, 0, 655372, 0, 0, 655373, 0, 0, 655374, 0, 0, 655375, 0, 0, 655376, 0, 0, 655377, 0, 0, 655378, 0, 0, 655379, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 655384, 0, 0, 786427, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 720920, 0, 0, 851963, 0, 0, 851964, 0, 0, 851965, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 917499, 0, 0, 917500, 0, 0, 917501, 0, 0, 917502, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 851992, 0, 0, 983035, 0, 0, 983036, 0, 0, 983037, 0, 0, 983038, 0, 0, 983039, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0 )

[node name="Baskets" type="Node2D" parent="."]

[node name="HealthBasket" parent="Baskets" instance=ExtResource( 4 )]
position = Vector2( 120, 32 )

[node name="SpeedBasket" parent="Baskets" instance=ExtResource( 5 )]
position = Vector2( 152, 32 )

[node name="DamageBasket" parent="Baskets" instance=ExtResource( 3 )]
position = Vector2( 216, 32 )

[node name="AttackSpeedBasket" parent="Baskets" instance=ExtResource( 6 )]
position = Vector2( 184, 32 )

[node name="YSort" type="YSort" parent="."]

[node name="Garden" type="YSort" parent="YSort"]

[node name="Plant" parent="YSort/Garden" instance=ExtResource( 7 )]
position = Vector2( 56, 40 )

[node name="Plant2" parent="YSort/Garden" instance=ExtResource( 7 )]
position = Vector2( 56, 88 )

[node name="Plant3" parent="YSort/Garden" instance=ExtResource( 7 )]
position = Vector2( 56, 136 )

[node name="Table" parent="YSort" instance=ExtResource( 13 )]
position = Vector2( 264, 128 )

[node name="Player" parent="YSort" instance=ExtResource( 1 )]
visible = false
position = Vector2( 152, 72 )

[node name="Bin" parent="YSort" instance=ExtResource( 12 )]
position = Vector2( 264, 72 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 160, 90 )
current = true
zoom = Vector2( 1.5, 1.5 )

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemyPathSpawn" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( -112, -88 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="PlayerBounds" type="StaticBody2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="PlayerBounds"]
polygon = PoolVector2Array( -80, -48, -80, 224, 400, 224, 400, -48, 400, -88, 424, -88, 424, 256, -112, 256, -112, -88, 400, -88, 400, -48 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -15.0

[connection signal="popup_hide" from="CanvasLayer/Tutorial" to="." method="_on_Tutorial_popup_hide"]
[connection signal="game_started" from="CanvasLayer/TitleScreen" to="." method="_on_TitleScreen_game_started"]
[connection signal="pressed" from="CanvasLayer/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="timeout" from="CanvasLayer/GameOver/Timer" to="." method="_on_Timer_timeout"]
[connection signal="game_over" from="YSort/Player" to="." method="_on_Player_game_over"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_MobTimer_timeout"]
